# BESM-666

./: .0pdd.yml  .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  TEST_C_FILE_TO_CHECK_PDD.c
.github/workflows/: clang-format.yml  cmake.yml  pdd.yml
1debug/: bubblesort-test  mult-test  nqueens-test  primenumber-test  privillege-change
e2e_test/: CMakeLists.txt  a0-validator.cpp  bootstrap.h  bootstrap.s  bubblesort-test.c  dummy-test.s  e2e-linker.ld  mult-test.s  nqueens-test.c  primenumber-test.c  privillege-change.s
include/besm-666/: basic-block.hpp  config.hpp  hart.hpp  instruction.hpp  math.hpp  non-copyable.hpp  riscv-types.hpp  rv-instruction-op.hpp  rv_instruction_commands.hpp
include/besm-666/autogen/: opcodes-to-format.hpp  operations-matrix.hpp
include/besm-666/decoder/: IllegalOpcodeException.hpp  decoder.hpp  opcodes-to-format.hpp  operations-matrix.hpp  prefetcher.hpp
include/besm-666/exec/: basic-block.hpp  csr.hpp  csrf.hpp  csrs.hpp  executor.hpp  gprf.hpp  icsr.hpp  mstatus.hpp
include/besm-666/memory/: memory.hpp  mmap-wrapper.hpp  mmu.hpp  page-allocator.hpp  phys-mem-device.hpp  phys-mem.hpp  prefetcher.hpp  ram.hpp
include/besm-666/reg/: rf.hpp
include/besm-666/sim/: config.hpp  hart.hpp  hooks.hpp  machine.hpp  plugin.hpp
include/besm-666/util/: assotiative-cache.hpp  bit-magic.hpp  dummy-exception.hpp  dynamic-library.hpp  elf-parser.hpp  range.hpp
include/besm-666/utils/: elf-parser.hpp
include/decoder/: decoder.hpp
plugins/: CMakeLists.txt
plugins/debug_tracer/: CMakeLists.txt  debug-tracer.cpp
src/: CMakeLists.txt  main.cpp
src/decoder/: CMakeLists.txt  basic-bock.cpp  decoder.cpp  prefetcher.cpp
src/elf/: CMakeLists.txt
src/exec/: CMakeLists.txt  basic-block.cpp  csrf.cpp  executor.cpp  gprf.cpp  icsr.cpp  mstatus.cpp
src/memory/: CMakeLists.txt  memory.cpp  mmap-wrapper.cpp  mmu.cpp  page-allocator.cpp  phys-mem-device.cpp  phys-mem.cpp  prefetcher.cpp  ram.cpp
src/sim/: CMakeLists.txt  config.cpp  hart.cpp  hooks.cpp  machine.cpp  plugin.cpp
src/util/: CMakeLists.txt  dynamic-library.cpp  elf-parser.cpp
src/utils/: CMakeLists.txt  elf-parser.cpp
standalone/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  dummy_test.cpp
test/decoder/: CMakeLists.txt  decoder_test.cpp
test/elfgen/: CMakeLists.txt  elf-gen.hpp
test/exec/: CMakeLists.txt  RV64I-executor-tests.cpp  simple-programs.cpp
test/memory/: CMakeLists.txt  memory-tests.cpp  mmu-tests.cpp  phys-mem-tests.cpp
test/reg/: gprf-tests.cpp
test/util/: CMakeLists.txt  bit-magic-tests.cpp
test/util/elf/: CMakeLists.txt  elf-parser-test.cpp
test/utils/elf/: CMakeLists.txt  elf-parser-test.cpp
tools/: clang-format.sh  riscv64-toolchain.make
unit_test/: CMakeLists.txt
unit_test/decoder/: CMakeLists.txt  decoder_test.cpp  prefetcher_test.cpp
unit_test/elfgen/: elf-gen.hpp
unit_test/exec/: CMakeLists.txt  RV64I-executor-tests.cpp  csr-field-tests.cpp  gprf-tests.cpp  simple-programs.cpp
unit_test/memory/: CMakeLists.txt  mmu-tests.cpp  page-pool-tests.cpp  phys-mem-tests.cpp
unit_test/util/: CMakeLists.txt  assotiative-cache-tests.cpp  bit-magic-tests.cpp  range-test.cpp
unit_test/util/assotiative-cache/: CMakeLists.txt  assotiative-cache-test.cpp
unit_test/util/elf/: elf-parser-test.cpp
